--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
 	},
 	"require": {
 		"php": ">=5.4",
-		"guzzle/guzzle": "3.9.*@dev",
+		"guzzle/guzzle": "3.9.*@dev"
+	},
+	"require-dev": {
 		"phpunit/phpunit": "4.2.5"
 	}
 }
